Auto-select roof segmentation result
